syntax = "proto3";

import "WscoreCommon.proto";

option java_multiple_files = true;
option java_package = "com.gx.wisestone.work.grpc.ds.attendanceapp";
option java_outer_classname = "AttendanceAppProviderProto";
package com.gx.wisestone.attendance.grpc;

// app考勤记录
service AttendanceAppProvider {

    //查询员工今日考勤记录
    rpc getEmployeeDayRecord (getEmployeeRecordDto) returns (getEmployeeDayRecordResp) {
    }

    //查询员工历史考勤记录
    rpc getEmployeeRecordList (getEmployeeRecordListQueryReq) returns (getEmployeeDayRecordResp) {
    }
}

message getEmployeeDayRecordResp {
    int32 code = 1;
    string msg = 2;
    map<string, string> data = 3;
    com.gx.wisestone.core.grpc.common.QueryDto query = 4;
    repeated getEmployeeRecordDto content = 5;
}

message getEmployeeRecordDto {
    int32 tenant_no = 1;
    int64 id = 2;
    int64 device_id = 3;
    string device_name = 4;
    int64 employee_id = 5;
    string employee_name = 6;
    string address = 7;
    string lng = 8;
    string lat = 9;
    int64 work_time = 10;
    int64 closing_time = 11;
    int32 work_type = 12;
    int32 closing_type = 13;
    int32 sys_tenant_no = 14;
    int64 company_id = 15;
    string company_name = 16;
}

message getEmployeeRecordListQueryReq {
    com.gx.wisestone.core.grpc.common.QueryDto query = 1;
    getEmployeeRecordDto dto = 2;
}
