syntax = "proto3";



option java_multiple_files = true;
option java_package = "com.gx.wisestone.uaa.grpc.lib.auth";
option java_outer_classname = "AuthApiProto";
package com.gx.wisestone.uaa.grpc;

//认证模块
service AuthApi {

    //注册
    rpc regist (RegistReq) returns (RegistResp) {

    }

    //用户信息修改
    rpc userModify (UserModifyReq) returns (UserModifyResp) {

    }

    //登陆
    rpc login (LoginReq) returns (LoginResp) {

    }

    //刷新token
    rpc refreshToken (RefreshTokenReq) returns (RefreshTokenResp) {

    }

    //tokenKeys
    rpc tokenKeys (TokenKeysReq) returns (TokenKeysResp) {

    }

    //验证码
    rpc verifyCode (VerifyCodeReq) returns (VerifyCodeResp) {

    }
}

//验证码 请求体
message VerifyCodeReq {
    //(必)
    string user_space = 3;
    //验证码 目标
    string target = 4;
    //目标类型 1 手机号; 2 邮箱; 3 微信;
    int32 targetType = 5;
    //用途 1 登录 2 注册 3 修改
    int32 purpose = 6;
}

//验证码 返回体
message VerifyCodeResp {
    int32 code = 1;
    string msg = 2;
    map<string, string> data = 3;
}

//注册 请求体
message RegistReq {
    //(必)
    string user_space = 3;
    repeated UserParamDto user_param = 4;
    //(必)
    string account = 5;
    //(必)
    string password = 6;
    //登录手机号
    string mobile = 7;
    //手机验证码
    string mobile_verify_code = 8;
}

//注册 返回体
message RegistResp {
    int32 code = 1;
    string msg = 2;
    map<string, string> data = 3;
    string user_id = 4;
}

//用户信息修改 请求体
message UserModifyReq {
    //(必)
    string user_space = 3;
    repeated UserParamDto userParam = 4;
    //(必)
    string user_id = 5;
    //账号(修改项)
    string account = 6;
    //密码(修改项)
    string password = 7;
    //登录手机号(修改项)
    string mobile = 8;
    //手机验证码
    string mobile_verify_code = 9;
    //登录token
    string token = 10;
}

//用户信息修改 返回体
message UserModifyResp {
    int32 code = 1;
    string msg = 2;
    map<string, string> data = 3;
}

//用户属性
message UserParamDto {
    string param_name = 1;
    string param_value = 2;
    //是否在token中携带
    int32 in_token = 3;
}

//登陆 请求体
message LoginReq {
    //(必)
    string user_space = 3;
    //(必) 账号/手机号 根据登录类型而定
    string account = 4;
    //(必) 密码/验证码 根据登录类型而定
    string password = 5;
    //登录类型 1 账号; 2 手机号; 3 短信验证码
    int32 login_type = 6;
}

//登陆 返回体
message LoginResp {
    int32 code = 1;
    string msg = 2;
    map<string, string> data = 3;
    string token = 4;
    string refresh_token = 5;
}

//刷新TOKEN 请求体
message RefreshTokenReq {
    //(必)
    string user_space = 3;
    //预留
    string token = 4;
    //刷新token(必)
    string refresh_token = 5;
    //账号(预留)
    string account = 6;
}

//刷新TOKEN 返回体
message RefreshTokenResp {
    int32 code = 1;
    string msg = 2;
    map<string, string> data = 3;
    string token = 4;
}

//tokenKeys 请求体
message TokenKeysReq {
    //类型 1 普通 2 sysApi
    int32 type = 1;
    //用户空间
    string user_space = 2;
}

//tokenKeys 返回体
message TokenKeysResp {
    int32 code = 1;
    string msg = 2;
    map<string, string> data = 3;
    repeated TokenKeyDto tokenKey = 4;
}

//TokenKey
message TokenKeyDto {
    string kid = 1;
    string kty = 2;
    string alg = 3;
    string n = 4;
    string e = 5;
}
